@@ -94,6 +94,26 @@ class FeedsUserProcessor extends FeedsProcessor {
   }
 
   /**
+   * Loads on-behalf implementations from mappers/
+   */
+  protected static function loadMappers() {
+    static $loaded = FALSE;
+
+    if (!$loaded) {
+      $path = drupal_get_path('module', 'feeds') .'/mappers';
+      $files = drupal_system_listing('.*\.inc$', $path, 'name', 0);
+      foreach ($files as $file) {
+        if (strstr($file->filename, '/mappers/')) {
+              require_once("./$file->filename");
+        }
+      }
+      // Rebuild cache.
+      module_implements('', FALSE, TRUE);
+    }
+    $loaded = TRUE;
+  }
+
+  /**
    * Execute mapping on an item.
    */
   protected function map($source_item) {
@@ -188,6 +208,11 @@ class FeedsUserProcessor extends FeedsProcessor {
         'optional_unique' => TRUE,
        );
     }
+
+    // Let other modules expose mapping targets.
+    self::loadMappers();
+    drupal_alter('feeds_user_processor_targets', $targets);
+
     return $targets;
   }
 
