@@ -1,0 +1,3 @@
+name,mail,color,letter
+magna,auctor@tortor.com,red,alpha
+rhoncus,rhoncus@habitasse.org,blue,beta
